--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bake?useSSL=false&serverTimezone=UTC&useLegacyDate
 spring.datasource.username=root
-spring.datasource.password=@MySql56
+spring.datasource.password=
 
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBdialect
