--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bake?useSSL=false&serverTimezone=UTC&useLegacyDate
 spring.datasource.username=root
-spring.datasource.password=
-
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBdialect
-
+spring.datasource.password=@MySql56
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=update
-
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
